# AI-reviewer

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/adapters/: github_client.py
app/dto/: diff.py  github.py
app/events/: pull_request_handler.py
app/modules/: diff_parser.py  webhook_security.py
app/server/controllers/: webhook.py
app/service/: pull_request_service.py
tests/unit/: test_diff_parser.py  test_webhook_controller.py  test_webhook_security.py
