[project]
name = "ai-reviewer"
version = "0.1.0"
description = "AI-powered GitHub pull request reviewer"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Aleksandr Sokolov" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
    "openai>=1.40.0",
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.34.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = [
    "app",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "B008",  # FastAPI Depends often uses function calls in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
plugins = [
    "pydantic.mypy",
]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
exclude = [
    "tmp/",
]

[[tool.mypy.overrides]]
module = [
    "loguru.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = [
    "app",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
